--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,10 @@ all.config
 # Kdevelop4
 *.kdev4
 
+# kernel extra file
+out
+kbuild.sh
+
 # fetched Android config fragments
 kernel/configs/android-*.cfg
 
