ext4: Import async_discard feature options from OPPO-Kernel source
Change-Id: I8825c0bf13d4b07d731d4561cacde54d61f6da02

--- a/fs/ext4/Kconfig
+++ b/fs/ext4/Kconfig
@@ -127,6 +127,11 @@ config EXT4_FS_ENCRYPTION
 	default n
 	depends on EXT4_ENCRYPTION
 
+config EXT4_FS_ASYNC_DISCARD
+	bool "Ext4 async discard Support"
+	depends on EXT4_FS
+	default n
+
 config EXT4_DEBUG
 	bool "EXT4 debugging support"
 	depends on EXT4_FS
