--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -529,7 +529,6 @@ CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_QPNP_REVID=y
@@ -767,3 +766,7 @@ CONFIG_IR_SPI=y
 
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCA_CLD_WLAN_PROFILE="default"
+
+CONFIG_PERF_HELPER=y
+CONFIG_BOOTUP_RECLAIM=y
+# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
