drivers: qcom: Expose control msm_performance turn on/off node
* nodepath: /sys/module/msm_performance/parameters/mboost
  echo 1 > mboost (enable-default), echo 0 > mboost (disabled)

Change-Id: Id1f5cc4fef73175b601856ec2c14360eb0e063d9

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -905,6 +905,13 @@ config MSM_PERFORMANCE
 	when requested by the userspace by changing the cpufreq policy
 	fmin and fmax.
 
+config MSM_PERFORMANCE_NODE
+	bool "Expose node to enable/disable msm performance"
+	depends on MSM_PERFORMANCE
+	default n
+	help
+	  Expose node to enable/disable msm performance.
+
 config MSM_DRM_NOTIFY
 	bool
 	depends on !DRM_MSM
