defconfig: xiaomi: Enable Expose msm_performance turn on/off node
Change-Id: I5f573a1595873e44627891e45ff60cef6b3c0c39

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -770,3 +770,5 @@ CONFIG_QCA_CLD_WLAN_PROFILE="default"
 CONFIG_PERF_HELPER=y
 CONFIG_BOOTUP_RECLAIM=y
 # CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
+
+CONFIG_MSM_PERFORMANCE_NODE=y
